[package]
name = "rsquery"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version='1.10.0', features = ['full']}
hex = "0.4.3"
byteorder = "1.4.3"
rand = "0.8.4"
actix-rt = "*"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]