[package]
name = "rsquery"
version = "0.1.1"
edition = "2018"
license = "Apache-2.0"
keywords = ["minecraft", "mcpe", "query", "raknet", "gamespy"]
description = "A fast and easy Minecraft query library intented for mcpe."
repository = "https://github.com/Jviguy/rsquery"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version='1.10.0', features = ['full']}
hex = "0.4.3"
byteorder = "1.4.3"
rand = "0.8.4"
actix-rt = "2.2.0"
